Wed 27 Oct 2004 23:58:56 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added <> and != for 'not equal to' condition in expressions

Sun 24 Oct 2004 19:04:03 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added missing setMaximum for Slider

Fri 22 Oct 2004 22:27:05 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added 'no-editor' FileSelector (only a button with configurable
	  caption)
	o added warning for unmatched @if and @switch

Tue 19 Oct 2004 23:23:28 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o Konsole now uses TextEdit widget
	o improved EOL handling in Konsole
	o compilation fixes

Sat 16 Oct 2004 09:39:48 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: recognize floating-point numbers in @String.isNumber

Thu 14 Oct 2004 12:06:05 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added Timer widget

Wed 13 Oct 2004 12:29:13 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o added missing 'checked' function for RadioButton 
	o added @String.findRev function for searching string backwards

Tue 12 Oct 2004 14:00:03 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: don't add brackets to functions with no parameters 

Mon 11 Oct 2004 14:00:03 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o improved 'cancel'

Sat 09 Oct 2004 16:54 PDT - Eric Laffoon <sequitur@kde.org>
	o Edited specials text and added comment @# to function browser
	o fixed function browser to support a fourth parameter

Sat 09 Oct 2004 14:00:03 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: bug in @File.append
	o In Function Browser show common widget functions for each widget
	o scroll content when process output is longer; show hourglass 
	  in Konsole widget when process is running
	o added new command 'cancel' to cancel script running in Konsole

Tue 05 Oct 2004 11:19:41 CEST - Michal Rudolf <mrudolf@kdewebdev.org>
	o fix: use "\n" as separator in multiselection mode of FileSelector
	o preliminary version of Konsole widget
